--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
 
     "name": "One Frame Link Video Frame Grabber",
     "description": "Allows the programmatic grabbing of frames from video elements (including those loaded in iframes).",
-    "version": "1.0",
+    "version": "0.0.0.1",
 
     "browser_action": {
         "default_icon": {
@@ -11,6 +11,12 @@
             "32": "icons/32.png",
             "64": "icons/64.png"
         }
+    },
+
+    "icons": {
+        "16": "icons/16.png",
+        "48": "icons/48.png",
+        "128": "icons/128.png"
     },
 
     "content_scripts": [
