--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,13 +22,13 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["js/vendor.js", "js/content_script.js"],
+            "js": ["js/content_script.js"],
             "all_frames": true
         }
     ],
 
     "background": {
-        "scripts": ["js/vendor.js", "js/background.js"]
+        "scripts": ["js/background.js"]
     },
 
     "externally_connectable": {
