--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chrome-extension-typescript-starter",
+  "name": "ofl-video-frame-grabber",
   "version": "1.0.0",
-  "description": "chrome-extension-typescript-starter",
+  "description": "Allows programmatic access to frames from video elements (including those loaded in iframes).",
   "main": "index.js",
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
@@ -11,10 +11,10 @@
     "style": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "author": "",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
+    "url": "https://github.com/OneFrameLink/ofl-video-frame-grabber.git"
   },
   "dependencies": {
     "react": "^17.0.1",
