--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
 
     "name": "One Frame Link Video Frame Grabber",
-    "description": "Allows the programmatic grabbing of frames from video elements (including those loaded in iframes).",
+    "description": "Allows programmatic access to frames from video elements (including those loaded in iframes).",
     "version": "0.0.0.1",
 
     "browser_action": {
@@ -22,18 +22,19 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["js/content_script.js"],
+            "js": ["js/vendor.js", "js/content_script.js"],
             "all_frames": true
         }
     ],
 
     "background": {
-        "scripts": ["js/background.js"]
+        "scripts": ["js/vendor.js", "js/background.js"]
     },
 
     "externally_connectable": {
         "matches": [
-            "https://*.oneframelink.com/*"
+            "https://*.oneframelink.com/*",
+            "https://*.csb.app/*"
         ]
     },
 
