--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,19 +22,18 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["js/vendor.js", "js/content_script.js"],
+            "js": ["js/content_script.js"],
             "all_frames": true
         }
     ],
 
     "background": {
-        "scripts": ["js/vendor.js", "js/background.js"]
+        "scripts": ["js/background.js"]
     },
 
     "externally_connectable": {
         "matches": [
-            "https://*.oneframelink.com/*",
-            "https://*.csb.app/*"
+            "https://*.oneframelink.com/*"
         ]
     },
 
